# camera-app

./: .bzrignore  AdvancedOptions.qml  BottomEdgeIndicators.qml  CMakeLists.txt  Camera.qml  CameraEnums.js  CircleButton.qml  CrossFadingButton.qml  DeleteDialog.qml  DeviceOrientation.qml  FadingButton.qml  FlashButton.qml  FocusRing.qml  GalleryView.qml  GalleryViewHeader.qml  GalleryViewLoader.qml  IconButton.qml  ImageButton.qml  Information.qml  Jenkinsfile  LiveView.qml  MediaInfoPopover.qml  MimeTypeMapper.js  NoSpaceHint.qml  OptionButton.qml  OptionValueButton.qml  OptionsOverlay.qml  OrientationHelper.qml  OverlayBlur.qml  PULL_REQUEST_TEMPLATE.md  PhotoEditorLoader.qml  PhotoRollHint.qml  PhotogridView.qml  PictureReview.qml  ProcessingFeedback.qml  README.click  RecordControl.qml  ResponsiveGridView.qml  SharePopover.qml  ShootButton.qml  (+39 more)
CameraApp/: CMakeLists.txt  adddatestamp.cpp  adddatestamp.h  advancedcamerasettings.cpp  advancedcamerasettings.h  components.cpp  components.h  fileoperations.cpp  fileoperations.h  foldersmodel.cpp  foldersmodel.h  postprocessoperations.cpp  postprocessoperations.h  qmldir  qstorageinfo.cpp  qstorageinfo.h  qstorageinfo_p.h  qstorageinfo_unix.cpp  storagelocations.cpp  storagelocations.h  storagemonitor.cpp  storagemonitor.h  storagemonitor_p.h
PhotoViewer/: Pager.qml  PhotoComponent.qml  PhotoViewer.qml
assets/: toolbar-left.sci  toolbar-middle.sci  toolbar-right.sci  ubuntu_shape@27.sci
click/: CMakeLists.txt  camera-apparmor.json  camera-content.json  manifest.json.in
debian/: camera-app-autopilot.install  camera-app-testing.install  camera-app.install  camera-app.lintian-overrides  changelog  control  copyright  rules
desktop/: CMakeLists.txt
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  camera-app.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  km.po  (+31 more)
setup/gui/: camera-app.desktop
snap/: camera.wrapper
tests/autopilot/: CMakeLists.txt
tests/autopilot/camera_app/: __init__.py  helpers.py
tests/autopilot/camera_app/data/: __init__.py
tests/autopilot/camera_app/emulators/: baseemulator.py  main_window.py  panel.py
tests/autopilot/camera_app/tests/: __init__.py  test_capture.py  test_diskspace.py  test_flash.py  test_focus.py  test_gallery_integration.py  test_gallery_view.py  test_main_camera_features.py  test_options.py  test_photo_editor.py  test_zoom.py
tests/autopilot/camera_app/ubuntu_system_tests/helpers/: __init__.py  backup_restore_fixture.py  file_system.py  sqlite.py
tests/autopilot/camera_app/ubuntu_system_tests/helpers/camera/: fixture_setup.py
tests/unittests/: CMakeLists.txt  qstorageinfo_stub.cpp  storageinfocontrol.cpp  storageinfocontrol.h  tst_BottomEdgeIndicators.qml  tst_PhotogridView.qml  tst_QmlTests.cpp  tst_StopWatch.qml  tst_ViewFinderGeometry.qml  tst_ViewFinderImage.qml  tst_storagemonitor.cpp
theme/: ThinSliderDelegate.qml  default.qmltheme  qmldir
